tests/snapshots/protocols__serialize__tests__simple_if.snap
---
source: src/serialize.rs
expression: content
snapshot_kind: text
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_if<dut: Counter>(in a: u64, out s: u64) {
  dut.a := a;
  step(2);
  if dut.s == 3 {
    assert_eq(dut.s, 0);
  } else {
    step(5);
  }
  if dut.s == 7 {
    assert_eq(dut.s, s);
  } else {
    assert_eq(dut.s, 0);
  }
}
