tests/snapshots/protocols__serialize__tests__simple_while.snap
---
source: src/serialize.rs
expression: content
snapshot_kind: text
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_while<dut: Counter>(in a: u64, in b: u64, out s: u64) {
  dut.a := a;
  while !(dut.s == b) {
    step(1);
  }
  step(2);
  assert_eq(dut.s, s);
}
